break: dep update & replace logo and white label

--- a/public/PrivacyPage.html
+++ b/public/PrivacyPage.html
@@ -94,7 +94,7 @@
           notify you by email or by posting a notice on our website prior to the effective date of the changes.</p>
         <h2>Contact Us</h2>
         <p>If you have any questions or concerns about this Privacy Policy or our data practices, please contact us at
-         <a href="https://github.com/Kuingsmile/word-GPT-Plus" target="_blank"> https://github.com/Kuingsmile/word-GPT-Plus</a>.</p>
+         <a href="https://aiapp.gg/contact" target="_blank">https://aiapp.gg/contact</a>.</p>
       </div>
     </body>
 
