--- a/public/index.html
+++ b/public/index.html
@@ -9,16 +9,16 @@
     <meta name="keywords" content="AIApp, Microsoft Word, ChatGPT, AI, Text Generation">
     <meta name="copyright"content="Cloud Stack 6">
     <meta name="author" content="Shahtab Mohtasin, cloudstack6@gmail.com">
-    <meta property="og:title" content="AIAPP WORD ADD-IN" >
     <meta name="coverage" content="Worldwide">
     <meta name="distribution" content="Global">
     <meta name="language" content="EN">
     <meta name="robots" content="index,follow" >
+    <meta property="og:title" content="AIAPP WORD ADD-IN - Microsoft Office Word" >
     <meta property="og:description" content="Enhance your Microsoft Word experience with AIApp, powered by ChatGPT. Generate creative and intelligent text effortlessly.">
-    <meta property="og:image" content="<%= BASE_URL %>aiapp-word-preview.jpg" >
-    <meta property="og:url" content="<%= BASE_URL %>">
+    <meta property="og:image" content="https://word.aiapp.gg/aiapp-word-preview.jpg" >
+    <meta property="og:url" content="https://word.aiapp.gg">
     <meta property="og:locale" content="en_US" >
-    <meta name="twitter:card" content="<%= BASE_URL %>aiapp-word-preview.jpg">
+    <meta name="twitter:card" content="https://word.aiapp.gg/aiapp-word-preview.jpg">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
   </head>
