chore: done UI tweak

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <meta property="og:url" content="https://word.aiapp.gg">
     <meta property="og:locale" content="en_US" >
     <meta name="twitter:card" content="https://word.aiapp.gg/aiapp-word-preview.jpg">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>AIAPP WORD ADD-IN - Microsoft Office Word</title>
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
   </head>
   <body>
